force-app/main/default/objects/Most_recent_contracted__c/Most_recent_contracted__c.object-meta.xml
<CustomObject>
    <label>Most recent contracted</label>
    <nameField>
        <label>Most recent contracted Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Most recent contracteds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>