force-app/main/default/objects/Most_recent_contracted__c/fields/Associated_Congress__c.field-meta.xml
<CustomField>
    <fullName>Associated_Congress__c</fullName>
    <label>Associated Congress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>