force-app/main/default/objects/Most_recent_contracted__c/fields/Contract_type__c.field-meta.xml
<CustomField>
    <fullName>Contract_type__c</fullName>
    <label>Contract type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>