force-app/main/default/objects/Most_recent_contracted__c/fields/Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>Execution_Status__c</fullName>
    <label>Execution Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>