force-app/main/default/objects/Most_recent_contracted__c/fields/Functional_owner__c.field-meta.xml
<CustomField>
    <fullName>Functional_owner__c</fullName>
    <label>Functional owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>