force-app/main/default/objects/Most_recent_contracted__c/fields/Primary_compound__c.field-meta.xml
<CustomField>
    <fullName>Primary_compound__c</fullName>
    <label>Primary compound</label>
    <length>255</length>
    <type>Text</type>
</CustomField>