force-app/main/default/objects/Most_recent_contracted__c/fields/Sponsoring__c.field-meta.xml
<CustomField>
    <fullName>Sponsoring__c</fullName>
    <label>Sponsoring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>